[package]
name = "advent_of_code_2020"
version = "1.0.0"
authors = ["Arnold Szederjesi <szederjesiarnold@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.9.0"
phf = { version = "0.7.24", features = ["macros"] }
regex = "1.4.2"
lazy_static = "1.4.0"
num = "0.3.1"